<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->


    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>


    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Your Books</string>
    <string name="empty_message">No books found… Tap on + to Scan/Add a book!</string>
    <string name="my_books">My Books</string>
    <string name="add_book">Add/Scan Book</string>
    <string name="books">List of Books</string>
    <string name="about">About this App</string>
    <string name="details">Book Details</string>
    <string name="add">Add</string>
    <string name="action_about">About</string>
    <string name="message_wait">Please wait...</string>
    <string name="confirm">Confirm</string>
    <string name="key_scan">ScanMode</string>
    <string name="message_isbn_intro">Type in the ISBN Code for your book, once done - the app will automatically fetch the book and display the content (using magic of course).</string>
    <string name="message_select_book">Select book to show details...</string>
</resources>
