<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tool="http://schemas.android.com/tools" android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:orientation="horizontal"
        android:padding="@dimen/default_margin"
        tool:showIn="@layout/fragment_add_book">

        <EditText
            android:id="@+id/ean"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_hint"
            android:inputType="number"
            android:maxLength="@integer/ean_size"
            android:maxLines="1"
            android:minEms="@integer/ean_width"
            android:saveEnabled="true"/>

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ean"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-light"
            android:textIsSelectable="true"
            android:textSize="@dimen/head_line"
            android:textStyle="bold"
            tool:text="Book Title"/>

        <TextView
            android:id="@+id/bookSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookTitle"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="2"
            tool:text="SubTitle"
            />

        <ImageView
            android:id="@+id/bookCover"
            android:layout_width="@dimen/image_width_large"
            android:layout_height="@dimen/image_height_large"
            android:layout_below="@id/bookSubTitle"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/book_cover"/>

        <TextView
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookCover"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="end"
            android:textSize="@dimen/small_fontsize"
            tool:text="Author"
            />

        <TextView
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/authors"
            android:layout_marginBottom="@dimen/margin_small"
            android:textSize="@dimen/small_fontsize"
            tool:text="Categories"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/categories"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_tiny"
                android:layout_marginRight="@dimen/margin_tiny"
                android:layout_weight="1"
                android:contentDescription="@string/cancel_button"
                android:background="@color/red_primary"
                android:text="@string/cancel_button"
                android:textColor="@android:color/white"
                android:visibility="gone"/>
            <Button
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_tiny"
                android:layout_marginStart="@dimen/margin_tiny"
                android:layout_weight="1"
                android:contentDescription="@string/add"
                android:background="@color/red_primary"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:visibility="gone"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/message_isbn_intro"
            android:textSize="@dimen/text_small"
            android:visibility="visible"/>

    </RelativeLayout>
</ScrollView>
