<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tool="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <ScrollView android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fillViewport="false">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/fullBookTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textIsSelectable="true"
                    android:textSize="@dimen/head_line"
                    android:textStyle="bold"
                    tool:text="Book Title"/>

                <TextView
                    android:id="@+id/fullBookSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fullBookTitle"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:textSize="@dimen/text_medium"
                    tool:text="Subtitle"/>

                <ImageView
                    android:id="@+id/fullBookCover"
                    android:layout_width="@dimen/image_width_large"
                    android:layout_height="@dimen/image_height_large"
                    android:layout_below="@+id/fullBookSubTitle"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_small"
                    android:contentDescription="@string/book_cover"/>

                <TextView
                    android:id="@+id/fullBookDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookCover"
                    android:layout_marginTop="@dimen/margin_small"
                    android:ellipsize="end"
                    tool:text="Book Description"
                    />


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookDesc"
                    android:layout_marginTop="@dimen/margin_small"
                    android:orientation="horizontal"
                    >

                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start|top"
                        tool:text="Categories"/>

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end|top"
                        android:textStyle="bold"
                        tool:text="Authors"/>
                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/red_primary"
            android:contentDescription="@string/add"
            android:padding="@dimen/margin_small"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:visibility="visible"/>

    </LinearLayout>
</layout>
